--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^2.9.3",
+    "axios": "^1.2.0",
     "polished": "^4.2.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
@@ -16,10 +17,12 @@
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
     "react-tabs": "^5.1.0",
+    "react-toastify": "^9.1.1",
     "styled-components": "^5.3.5",
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@types/node": "^18.11.10",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@types/styled-components": "^5.1.25",
