--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,1 +1,1 @@
-DATABASE_URL="mysql://usuario:password@localhost:3306/dbname?connection_limit=3"
+DATABASE_URL="mysql://root:root@localhost:3306/social_media?connection_limit=3"
